fix: fixed dark mode turning text white

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,11 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
+  body {
+    color: rgb(var(--foreground-rgb));
+  }
 }
+
 
 body {
   color: rgb(var(--foreground-rgb));
